--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "description": "saeeam project portal",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "BROWSER=none WDS_SOCKET_PORT=0 react-scripts start"
   },
   "keywords": [
     "saeeam"
   ],
   "author": "saeeam",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
